--- a/rpcs3/rpcs3.vcxproj
+++ b/rpcs3/rpcs3.vcxproj
@@ -2123,6 +2123,7 @@
     <None Include="..\.ci\build-linux.sh" />
     <None Include="..\.ci\build-mac-arm64.sh" />
     <None Include="..\.ci\build-mac.sh" />
+    <None Include="..\.ci\build-windows-clang.sh" />
     <None Include="..\.ci\deploy-linux-legacy.sh" />
     <None Include="..\.ci\deploy-linux.sh" />
     <None Include="..\.ci\deploy-llvm.sh" />
@@ -2137,6 +2138,7 @@
     <None Include="..\.ci\optimize-mac.sh" />
     <None Include="..\.ci\setup-llvm.sh" />
     <None Include="..\.ci\setup-windows.sh" />
+    <None Include="..\.ci\setup-windows-ci-vars.sh" />
     <None Include="..\.github\workflows\llvm.yml" />
     <None Include="..\.github\workflows\qt-ts.yml" />
     <None Include="..\.github\workflows\rpcs3.yml" />
