remove cirrus/azure references

--- a/.github/workflows/rpcs3.yml
+++ b/.github/workflows/rpcs3.yml
@@ -344,9 +344,5 @@ jobs:
         with:
           envs: 'QT_VER_MAIN LLVM_COMPILER_VER'
           usesh: true
-          prepare: |
-            pkg install -y "llvm$LLVM_COMPILER_VER"
-            pkg install -y git ccache cmake ninja "qt$QT_VER_MAIN-multimedia" "qt$QT_VER_MAIN-svg" glew openal-soft ffmpeg
-            pkg install -y pkgconf alsa-lib pulseaudio sdl3 evdev-proto vulkan-headers vulkan-loader
-      
+          prepare: .ci/install-freebsd.sh     
           run: .ci/build-freebsd.sh
