Add github actions for windows llvm

--- a/rpcs3/rpcs3.vcxproj
+++ b/rpcs3/rpcs3.vcxproj
@@ -2125,15 +2125,20 @@
     <None Include="..\.ci\build-mac.sh" />
     <None Include="..\.ci\deploy-linux-legacy.sh" />
     <None Include="..\.ci\deploy-linux.sh" />
+    <None Include="..\.ci\deploy-llvm.sh" />
     <None Include="..\.ci\deploy-mac-arm64.sh" />
     <None Include="..\.ci\deploy-mac.sh" />
     <None Include="..\.ci\deploy-windows.sh" />
     <None Include="..\.ci\docker.env" />
+    <None Include="..\.ci\generate-qt-ts.sh" />
     <None Include="..\.ci\get_keys-windows.sh" />
     <None Include="..\.ci\github-upload.sh" />
     <None Include="..\.ci\install-freebsd.sh" />
     <None Include="..\.ci\optimize-mac.sh" />
+    <None Include="..\.ci\setup-llvm.sh" />
     <None Include="..\.ci\setup-windows.sh" />
+    <None Include="..\.github\workflows\llvm.yml" />
+    <None Include="..\.github\workflows\qt-ts.yml" />
     <None Include="..\.github\workflows\rpcs3.yml" />
     <None Include="..\bin\GuiConfigs\Classic (Bright).qss" />
     <None Include="..\bin\GuiConfigs\Darker Style by TheMitoSan.qss" />
