Added Build MSG to show that Gamemode is available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,7 @@ if(LINUX)
     find_program(GAMEMODE_FOUND gamemoded) ## Only works if gamemode is installed on system (might include lib32 case)
     if(GAMEMODE_FOUND)
          add_compile_definitions(GAMEMODE_AVAILABLE)
+         message(GAMEMODE_AVAILABLE="${GAMEMODE_AVAILABLE}")
     endif()
 endif()
 
