Reverted UI changes, added Gamemode as a submodule, cleaned up comments as per PR review

--- a/.gitmodules
+++ b/.gitmodules
@@ -108,3 +108,7 @@
 	path = 3rdparty/GPUOpen/VulkanMemoryAllocator
 	url = ../../GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
 	ignore = dirty
+[submodule "3rdparty/feralinteractive/feralinteractive"]
+	path = 3rdparty/feralinteractive/feralinteractive
+	url = ../../FeralInteractive/gamemode.git
+	ignore = dirty
