--- a/.github/workflows/rpcs3.yml
+++ b/.github/workflows/rpcs3.yml
@@ -5,8 +5,8 @@ defaults:
     shell: bash
 on:
   push:
-    branches:
-      - master # Only trigger push event on 'master' branch
+    #branches:
+    #  - master # Only trigger push event on 'master' branch
   pull_request:
   workflow_dispatch:
 
@@ -24,7 +24,7 @@ env:
 jobs:
   Linux_Build:
     # Only run push event on master branch of main repo, but run all PRs
-    if: github.event_name != 'push' || (github.repository == 'RPCS3/rpcs3' && github.ref_name == 'master')
+    #if: github.event_name != 'push' || (github.repository == 'RPCS3/rpcs3' && github.ref_name == 'master')
     strategy:
       fail-fast: false
       matrix:
@@ -117,13 +117,13 @@ jobs:
 
   Mac_Build:
     # Only run push event on master branch of main repo, but run all PRs
-    if: github.event_name != 'push' || (github.repository == 'RPCS3/rpcs3' && github.ref_name == 'master')
+    #if: github.event_name != 'push' || (github.repository == 'RPCS3/rpcs3' && github.ref_name == 'master')
     strategy:
       fail-fast: false
       matrix:
         include:
           - name: Intel
-            build_sh: "arch -X86_64 .ci/build-mac.sh"
+            build_sh: .ci/build-mac.sh
             UPLOAD_COMMIT_HASH: 51ae32f468089a8169aaf1567de355ff4a3e0842
             UPLOAD_REPO_FULL_NAME: rpcs3/rpcs3-binaries-mac
           - name: Apple Silicon
@@ -191,14 +191,14 @@ jobs:
         run: .ci/github-upload.sh
 
       - name: Save Build Ccache
-        if: github.ref == 'refs/heads/master'
+        #if: github.ref == 'refs/heads/master'
         uses: actions/cache/save@main
         with:
           path: ${{ env.CCACHE_DIR }}
           key: ${{ steps.restore-build-ccache.outputs.cache-primary-key }}
 
       - name: Save Qt Cache
-        if: github.ref == 'refs/heads/master'
+        #if: github.ref == 'refs/heads/master'
         uses: actions/cache/save@main
         with:
           path: /tmp/Qt
@@ -206,15 +206,15 @@ jobs:
 
   Windows_Build:
     # Only run push event on master branch of main repo, but run all PRs
-    if: github.event_name != 'push' || (github.repository == 'RPCS3/rpcs3' && github.ref_name == 'master')
+    #if: github.event_name != 'push' || (github.repository == 'RPCS3/rpcs3' && github.ref_name == 'master')
     name: RPCS3 Windows
     runs-on: windows-2025
     env:
       COMPILER: msvc
       QT_VER_MAIN: '6'
-      QT_VER: '6.9.1'
+      QT_VER: '6.9.3'
       QT_VER_MSVC: 'msvc2022'
-      QT_DATE: '202505291653'
+      QT_DATE: '202509261208'
       LLVM_VER: '19.1.7'
       VULKAN_VER: '1.3.268.0'
       VULKAN_SDK_SHA: '8459ef49bd06b697115ddd3d97c9aec729e849cd775f5be70897718a9b3b9db5'
@@ -312,14 +312,14 @@ jobs:
         run: .ci/github-upload.sh
 
       - name: Save Build Ccache
-        if: github.ref == 'refs/heads/master'
+        #if: github.ref == 'refs/heads/master'
         uses: actions/cache/save@main
         with:
           path: ${{ env.CCACHE_DIR }}
           key: ${{ steps.restore-build-ccache.outputs.cache-primary-key }}
 
       - name: Save Dependencies Cache
-        if: github.ref == 'refs/heads/master'
+        #if: github.ref == 'refs/heads/master'
         uses: actions/cache/save@main
         with:
           path: ${{ env.DEPS_CACHE_DIR }}
@@ -327,25 +327,33 @@ jobs:
 
   Windows_Build_Clang:
     # Only run push event on master branch of main repo, but run all PRs
-    if: github.event_name != 'push' || (github.repository == 'RPCS3/rpcs3' && github.ref_name == 'master')
-    name: RPCS3 Windows Clang
+    #if: github.event_name != 'push' || (github.repository == 'RPCS3/rpcs3' && github.ref_name == 'master')
     runs-on: windows-2025
     strategy:
+      fail-fast: false
       matrix:
         include:
           - msys2: clang64
             compiler: clang
             arch: win64
+          - compiler: clang-cl
+            llvmver: 20.1.8
+            arch: win64
+
     env:
       CCACHE_DIR: 'C:\ccache'
+      VCPKG_TRIPLET: x64-windows
+      VCPKG_BUILD_TYPE: release
+    name: RPCS3 Windows ${{ matrix.compiler }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@main
         with:
           fetch-depth: 0
-
+        
       - name: Setup msys2
         uses: msys2/setup-msys2@v2
+        if: ${{ matrix.compiler == 'clang' }}
         with:
           msystem: ${{ matrix.msys2 }}
           update: true
@@ -373,6 +381,89 @@ jobs:
             git
             p7zip
 
+      - name: Clone and bootstrap vcpkg
+        if: ${{ matrix.compiler == 'clang-cl' }}
+        shell: pwsh
+        run: |
+          git clone https://github.com/microsoft/vcpkg.git
+          .\vcpkg\bootstrap-vcpkg.bat
+          
+      - name: Restore vcpkg cache
+        if: ${{ matrix.compiler == 'clang-cl' }}
+        uses: actions/cache/restore@main
+        id: restore-vcpkg-cache
+        with:
+          path: |
+            vcpkg/vcpkg.exe
+            vcpkg/installed
+            vcpkg/buildtrees
+          key: vcpkg-${{ runner.os }}-${{ matrix.compiler }}-${{ runner.arch }}-${{ hashFiles('**/vcpkg') }}
+          restore-keys: vcpkg-${{ runner.os }}-${{ matrix.compiler }}-${{ runner.arch }}-
+
+      - name: Install dependencies with vcpkg
+        if: ${{ matrix.compiler == 'clang-cl' }}
+        shell: pwsh
+        run: >-
+          .\vcpkg\vcpkg.exe install
+          ffmpeg[avcodec,avformat,swscale,swresample]
+          libpng
+          opencv
+          qtbase
+          qtmultimedia
+          qtsvg
+          qttools
+          vulkan
+          zlib
+          --triplet $env:VCPKG_TRIPLET
+          --clean-after-build
+
+      - name: Save vcpkg cache
+        if: ${{ matrix.compiler == 'clang-cl' }}
+        #if: ${{ !steps.restore-vcpkg-cache.outputs.cache-hit && matrix.compiler == 'clang-cl' }}
+        #if: github.ref == 'refs/heads/master'
+        uses: actions/cache/save@main
+        with:
+          path: |
+            vcpkg/vcpkg.exe
+            vcpkg/installed
+            vcpkg/buildtrees
+          key: ${{ steps.restore-vcpkg-cache.outputs.cache-primary-key }}
+
+      - name: Restore LLVM Cache
+        if: ${{ matrix.compiler == 'clang-cl' }} 
+        uses: actions/cache/restore@main
+        id: llvm-cache
+        with:
+          path: ./llvm-${{ matrix.llvmver }}
+          key: ${{ runner.os }}-llvm-dl-cache-${{ hashFiles('**/llvm-${{ matrix.llvmver }}') }}
+          restore-keys: ${{ runner.os }}-clang-dl-cache-
+          
+      - name: Add LLVM
+        if: ${{ matrix.compiler == 'clang-cl' }}
+        shell: pwsh
+        run: |
+          if (!(Test-Path -Path D:\a\rpcs3\rpcs3\llvm-${{ matrix.llvmver }}\)) {
+            rm -r llvm-*
+            curl -fsSLO https://github.com/vovkos/llvm-package-windows/releases/download/llvm-20.1.8/llvm-20.1.8-windows-amd64-msvc17-msvcrt.7z
+            curl -fsSLO https://github.com/vovkos/llvm-package-windows/releases/download/clang-20.1.8/clang-20.1.8-windows-amd64-msvc17-msvcrt.7z
+            7z x llvm-*.7z
+            mv llvm* llvm-${{ matrix.llvmver }}
+            rm llvm-*.7z
+            7z x clang-*.7z
+            Copy-Item -Path "D:\a\rpcs3\rpcs3\clang*\*" -Destination "D:\a\rpcs3\rpcs3\llvm-${{ matrix.llvmver }}" -Recurse -Force
+            rm -r clang*
+          }
+          Add-Content -Path $env:GITHUB_PATH -Value "D:\a\rpcs3\rpcs3\llvm-${{ matrix.llvmver }}\bin"
+          C:\PROGRA~1\LLVM\bin\clang-cl.exe --version
+ 
+      - name: Save LLVM Cache
+        if: ${{ matrix.compiler == 'clang-cl' && steps.llvm-cache.outputs.cache-hit != 'true' }}
+        #if: github.ref == 'refs/heads/master'
+        uses: actions/cache/save@main
+        with:
+          path: ./llvm-${{ matrix.llvmver }}
+          key: ${{ steps.llvm-cache.outputs.cache-primary-key }}
+        
       - name: Restore build Ccache
         uses: actions/cache/restore@main
         id: restore-build-ccache
@@ -382,19 +473,38 @@ jobs:
           restore-keys: ${{ runner.os }}-ccache-${{ matrix.compiler }}-${{ runner.arch }}-
 
       - name: Build RPCS3
+        if: ${{ matrix.compiler == 'clang' }}
         shell: msys2 {0}
         run: |
           export CCACHE_DIR=$(cygpath -u "$CCACHE_DIR")
           echo "CCACHE_DIR=$CCACHE_DIR"
-          .ci/setup-windows-ci-vars.sh ${{ matrix.arch }} ${{ matrix.compiler }}
           .ci/build-windows-clang.sh
+          
+      - name: install DIA SDK
+        if: ${{ matrix.compiler == 'clang-cl' }}      
+        run: |
+          mkdir -p "C:/Program Files (x86)/Microsoft Visual Studio/2019/Professional" || true
+          cp -r "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/DIA SDK" "C:/Program Files (x86)/Microsoft Visual Studio/2019/Professional/DIA SDK"
+
+      - name: Build RPCS3
+        if: ${{ matrix.compiler == 'clang-cl' }}
+        shell: cmd
+        run: |
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" amd64
+          powershell -ExecutionPolicy Bypass -File .ci/build-windows-clang-cl.ps1
 
       - name: Save build Ccache
-        if: github.ref == 'refs/heads/master'
+        #if: github.ref == 'refs/heads/master'
         uses: actions/cache/save@main
         with:
           path: ${{ env.CCACHE_DIR }}
           key: ${{ steps.restore-build-ccache.outputs.cache-primary-key }}
+
+      - name: Prepare Artifacts
+        shell: bash
+        run: |
+          .ci/setup-windows-ci-vars.sh ${{ matrix.arch }} ${{ matrix.compiler }}
+          .ci/deploy-windows-${{ matrix.compiler }}.sh
 
       - name: Upload artifacts
         uses: actions/upload-artifact@main
@@ -406,7 +516,7 @@ jobs:
 
   FreeBSD_Build:
       # Only run push event on master branch of main repo, but run all PRs
-    if: github.event_name != 'push' || (github.repository == 'RPCS3/rpcs3' && github.ref_name == 'master')
+    #if: github.event_name != 'push' || (github.repository == 'RPCS3/rpcs3' && github.ref_name == 'master')
     name: RPCS3 FreeBSD 
     runs-on: ubuntu-latest
     timeout-minutes: 60
@@ -437,7 +547,7 @@ jobs:
           run: .ci/install-freebsd.sh && .ci/build-freebsd.sh
 
       - name: Save Build Ccache
-        if: github.ref == 'refs/heads/master'
+        #if: github.ref == 'refs/heads/master'
         uses: actions/cache/save@main
         with:
           path: ${{ env.CCACHE_DIR }}
