--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ option(USE_SYSTEM_PUGIXML "Prefer system pugixml instead of the builtin one" OFF
 option(USE_SYSTEM_SDL "Prefer system SDL instead of the builtin one" ON)
 option(USE_SYSTEM_WOLFSSL "Prefer system MoltenVK instead of the builtin one" OFF)
 option(USE_SYSTEM_ZLIB "Prefer system ZLIB instead of the builtin one" ON)
+option(USE_SYSTEM_ZSTD "Prefer system zstd instead of the prebuild one" OFF)
 option(HAS_MEMORY_BREAKPOINTS "Add support for memory breakpoints to the interpreter" OFF)
 option(USE_LTO "Use LTO for building" ON)
 option(BUILD_RPCS3_TESTS "Build RPCS3 unit tests." OFF)
@@ -116,7 +117,9 @@ if(MSVC)
             message(AUTHOR_WARNING "Debug build currently can not work with static CRT.")
         endif()
     endif()
-    add_compile_options(/MP)
+    if (NOT CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        add_compile_options(/MP)
+    endif()
 endif()
 
 if(NOT CMAKE_SIZEOF_VOID_P EQUAL 8)
