--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ option(USE_SYSTEM_CURL "Prefer system Curl instead of the prebuild one" ON)
 option(USE_SYSTEM_FAUDIO "Prefer system FAudio instead of the builtin one" OFF)
 option(USE_SYSTEM_FFMPEG "Prefer system ffmpeg instead of the prebuild one" OFF)
 option(USE_SYSTEM_FLATBUFFERS "Prefer system flatbuffers instead of the builtin one" OFF)
+option(USE_SYSTEM_GLSLANG "Prefer system glslang instead of the builtin one" OFF)
 option(USE_SYSTEM_LIBPNG "Prefer system libpng instead of the builtin one" OFF)
 option(USE_SYSTEM_LIBUSB "Prefer system libusb instead of the builtin one" OFF)
 option(USE_SYSTEM_MINIUPNPC "Prefer system MiniUPnPc instead of the builtin one" OFF)
