--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ option(USE_SYSTEM_OPENCV "Prefer system OpenCV instead of the builtin one" ON)
 option(USE_SYSTEM_PUGIXML "Prefer system pugixml instead of the builtin one" OFF)
 option(USE_SYSTEM_RTMIDI "Prefer system RtMidi instead of the builtin one" OFF)
 option(USE_SYSTEM_SDL "Prefer system SDL instead of the builtin one" ON)
+option(USE_SYSTEM_VULKAN_MEMORY_ALLOCATOR "Prefer system Vulkan Memory Allocator instead of the builtin one" OFF)
 option(USE_SYSTEM_WOLFSSL "Prefer system MoltenVK instead of the builtin one" OFF)
 option(USE_SYSTEM_ZLIB "Prefer system ZLIB instead of the builtin one" ON)
 option(USE_SYSTEM_ZSTD "Prefer system zstd instead of the builtin one" OFF)
